--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 jtbl changelog
 
+20200309 v0.5.1
+- Wrap or truncate row headers with no values
+
 20200309 v0.5.0
 - Improved auto scaling
 - Improved error handling
