--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 jtbl changelog
 
+20220215 v1.3.0
+- Add -m markdown table output option
+
 20211223 v1.2.3
 - Remove item header from rotate view if there is only one item
 - Add separator line under item header in rotate view
