--- a/man/jtbl.1
+++ b/man/jtbl.1
@@ -1,4 +1,4 @@
-.TH jtbl 1 2022-02-15 1.3.0 "JTBL - JSON tables in the terminal"
+.TH jtbl 1 2022-04-04 1.3.1 "JTBL - JSON tables in the terminal"
 .SH NAME
 jtbl \- Print JSON and JSON Lines data as a table in the terminal
 .SH SYNOPSIS
@@ -23,6 +23,8 @@ cat data.json | jtbl [OPTIONS]
 \fB-m\fP markdown table output
 
 \fB-n\fP do not try to wrap if too wide for the terminal
+
+\fB-q\fP quiet - don't print error messages
 
 \fB-r\fP rotate table output
 
