add HTML and CSV output options

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 jtbl changelog
 
+20221004 v1.4.0
+- Add CSV (`-c`) and HTML (`-H`) table output options
+
 20220731 v1.3.2
 - Add `__main__.py` for `python -m jtbl` use cases
 
