--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,9 @@
 jtbl changelog
 
-20221005 v1.4.0
-- Add CSV (`-c`) and HTML (`-H`) table output options
-- Preserve column order as much as possible
+20221006 v1.4.0
+- Add CSV (`-c`) table output option
+- Add HTML (`-H`) table output option
+- Preserve column order when wrapping or truncation is required
 - Bump tabulate library to v0.8.10
 
 20220731 v1.3.2
