update man page

--- a/man/jtbl.1
+++ b/man/jtbl.1
@@ -20,6 +20,10 @@ cat data.json | jtbl [OPTIONS]
 .SS Options
 \fB--cols=n\fP manually configure the terminal width
 
+\fB-c\fP CSV table output
+
+\fB-H\fP HTML table output
+
 \fB-m\fP markdown table output
 
 \fB-n\fP do not try to wrap if too wide for the terminal
