--- a/man/jtbl.1
+++ b/man/jtbl.1
@@ -1,4 +1,4 @@
-.TH jtbl 1 2023-10-22 1.5.3 "JTBL - JSON tables in the terminal"
+.TH jtbl 1 2023-11-24 1.6.0 "JTBL - JSON tables in the terminal"
 .SH NAME
 jtbl \- Print JSON and JSON Lines data as a table in the terminal
 .SH SYNOPSIS
@@ -18,27 +18,27 @@ cat data.json | jtbl [OPTIONS]
 .PP
 
 .SS Options
-\fB--cols=n\fP manually configure the terminal width
+\fB--cols=n\fP          manually configure the terminal width
 
-\fB-c\fP CSV table output
+\fB-c\fP, \fB--csv\fP         CSV table output
 
-\fB-h\fP help
+\fB-h\fP, \fB--help\fP        help
 
-\fB-f\fP fancy table output
+\fB-f\fP, \fB--fancy\fP       fancy table output
 
-\fB-H\fP HTML table output
+\fB-H\fP, \fB--html\fP        HTML table output
 
-\fB-m\fP markdown table output
+\fB-m\fP, \fB--markdown\fP    markdown table output
 
-\fB-n\fP no-wrap - do not try to wrap if too wide for the terminal
+\fB-n\fP, \fB--no-wrap\fP     do not try to wrap if too wide for the terminal
 
-\fB-q\fP quiet - don't print error messages
+\fB-q\fP, \fB--quiet\fP       quiet - don't print error messages
 
-\fB-r\fP rotate table output
+\fB-r\fP, \fB--rotate\fP      rotate table output
 
-\fB-t\fP truncate data if too wide for the terminal
+\fB-t\fP, \fB--truncate\fP    truncate data if too wide for the terminal
 
-\fB-v\fP version info
+\fB-v\fP, \fB--version\fP     version info
 
 .SS Example
 .na
