Add DocuWiki table output option

--- a/man/jtbl.1
+++ b/man/jtbl.1
@@ -22,9 +22,11 @@ cat data.json | jtbl [OPTIONS]
 
 \fB-c\fP, \fB--csv\fP         CSV table output
 
-\fB-h\fP, \fB--help\fP        help
+\fB-d\fP, \fB--docuwiki\fP    DocuWiki table output
 
 \fB-f\fP, \fB--fancy\fP       fancy table output
+
+\fB-h\fP, \fB--help\fP        help
 
 \fB-H\fP, \fB--html\fP        HTML table output
 
