--- a/man/jtbl.1
+++ b/man/jtbl.1
@@ -22,7 +22,7 @@ cat data.json | jtbl [OPTIONS]
 
 \fB-c\fP, \fB--csv\fP         CSV table output
 
-\fB-d\fP, \fB--docuwiki\fP    DocuWiki table output
+\fB-d\fP, \fB--dokuwiki\fP    DokuWiki table output
 
 \fB-f\fP, \fB--fancy\fP       fancy table output
 
